# dcc

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  go.mod
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml
cmd/dcc/: main.go
internal/app/: messages.go  model.go  model_test.go  notifications.go  notifications_test.go  update.go  view.go
internal/config/: config.go
internal/data/: git.go  git_test.go  meetings.go  ports.go  prs.go  prs_test.go
internal/ui/: git.go  meetings.go  ports.go  prs.go  stashes.go  stashes_test.go  styles.go  styles_test.go
src/: app.rs  main.rs  ui.rs
src/data/: config.rs  git.rs  meetings.rs  mod.rs  ports.rs  prs.rs
src/widgets/: git.rs  meetings.rs  mod.rs  ports.rs  prs.rs
