[package]
name = "dcc"
version = "0.1.0"
edition = "2021"
description = "Dev Command Center - A terminal dashboard for developer context"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = "0.4"
anyhow = "1"
